Fix IE wrapping

--- a/app/components/moderator-list-add/styles.scss
+++ b/app/components/moderator-list-add/styles.scss
@@ -36,6 +36,7 @@
 
 .moderator-name {
     flex: 1;
+    -ms-flex: auto; /* stylelint-disable-line property-no-vendor-prefix */
     display: flex;
     align-items: center;
     flex-wrap: wrap;
@@ -70,6 +71,7 @@
 
 .moderator-dropdown {
     flex: 1;
+    -ms-flex: auto; /* stylelint-disable-line property-no-vendor-prefix */
     display: flex;
     justify-content: center;
 
@@ -93,6 +95,7 @@
 
 .row-controls {
     flex: 1;
+    -ms-flex: auto; /* stylelint-disable-line property-no-vendor-prefix */
     display: flex;
     justify-content: flex-end;
 }
